--- a/client/src/Pages/Login.css
+++ b/client/src/Pages/Login.css
@@ -98,6 +98,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 .login a{
     color: #fff;
